--- a/item-eyez/item-eyez.csproj
+++ b/item-eyez/item-eyez.csproj
@@ -23,6 +23,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="DeathScripts.Analyzer" Version="1.0.3" >
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
 		<PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.556">
 			<PrivateAssets>all</PrivateAssets>
