--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Build
         run: dotnet build item-eyez.sln -c $env:Configuration --no-restore
 
-      - name: Test (exclude UI category)
+      - name: Test
         run: >-
           dotnet test Item-eyez.Tests/Item-eyez.Tests.csproj
           -c $env:Configuration --no-build
           --logger trx --results-directory .\TestResults
-          --collect:"XPlat Code Coverage" --filter "TestCategory!=UI"
+          --collect:"XPlat Code Coverage"
 
       - name: Upload Test Results
         if: always()
